#
# The MIT License (MIT)
#
# Copyright (c) 2026 Steffen Nuessle
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.
#

import("//gn/python/python.gni")
import("//gn/vars.gni")

python("make-build") {
  testonly = true
  deps = [ metadata.target ]
  inputs = metadata.outputs
  outputs = [ "$target_gen_dir/build.ninja" ]

  requirements = [
    "ninja",
    "xxhash",
  ]
  env = [ "PYTHONPATH=" + rebase_path("//gn/python/packages", root_build_dir) ]

  script = "//gn/clang-format/make-build.py"
  args = [
    "--build-directory",
    rebase_path(target_gen_dir, root_build_dir),
    "-o",
    rebase_path(outputs[0], root_build_dir),
    "--metadata",
    rebase_path(inputs[0], root_build_dir),
    "--clang-format",
    rebase_path(clang_format_tool),
  ]
}

action("check") {
  testonly = true
  deps = [ ":make-build" ]
  inputs = get_target_outputs(deps[0])
  outputs = [ "$target_gen_dir/$target_name.non-existant" ]
  mnemonic = "NINJA"

  script = ninja_tool
  args = [
    "-C",
    rebase_path(target_gen_dir, root_build_dir),
  ]
}
