#
# The MIT License (MIT)
#
# Copyright (c) 2025-2026  Steffen Nuessle
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.
#

import("//gn/python/python.gni")
import("//gn/sources/sources.gni")
import("//gn/toolchains/clang/vars.gni")

sources("sources") {
  testonly = true
  outputs = [ "$target_gen_dir/sources.json" ]

  include_sources = [
    "*.c",
    "*.cc",
    "*.cpp",
    "*.cxx",
  ]
}

python("clang-tidy") {
  testonly = true
  deps = [ ":sources" ]
  inputs = get_target_outputs(":sources")
  outputs = [ "$target_gen_dir/$target_name.non-existant" ]
  mnemonic = "CLANG-TIDY"
  pool = "//:console"

  script = "//gn/clang-tidy/invoke-clang-tidy.py"
  args = [
    "--clang-tidy",
    clang_tidy_tool,
    "-p",
    rebase_path(root_build_dir, root_build_dir),
    "--vfsoverlay",
    rebase_path(clang.vfs_path, root_build_dir),
    "--sources",
    rebase_path(inputs[0], root_build_dir),
  ]
}
