#
# The MIT License (MIT)
#
# Copyright (c) 2025 Steffen Nuessle
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.
#

template("component") {
  if (defined(invoker.unittest_support)) {
    _unittest_support = invoker.unittest_support
  } else {
    _unittest_support = true
  }

  if (_unittest_support && defined(invoker.sources)) {
    _patterns = [
      "*.c",
      "*.cc",
      "*.cpp",
      "*.cxx",
      "*.S",
    ]

    _sources = filter_include(invoker.sources, _patterns)

    if (_sources != []) {
      if (defined(invoker.deps)) {
        _deps = invoker.deps
      } else {
        _deps = []
      }
    }

    foreach(_item, _sources) {
      _name = get_path_info(_item, "name")
      _target_name_unit = "$target_name@$_name"

      source_set(_target_name_unit) {
        _ignore = [
          "configs",
          "deps",
          "libs",
          "sources",
          "testonly",
          "unittest_configs",
        ]

        forward_variables_from(invoker, "*", _ignore)

        metadata = {
          component = [ target_name ]
          template = [ "component" ]
        }

        testonly = true

        if (!defined(public_deps)) {
          public_deps = []
        }

        # Components must not depend on other components but rather their
        # respective interfaces. We convert deps to public deps here so the
        # interfaces will # propagate to unit tests referencing this target.
        public_deps += _deps

        if (defined(invoker.unittest_configs)) {
          configs = invoker.unittest_configs
        } else {
          configs = [ "//gn/unittest:config" ]
        }

        sources = [ _item ]
        public = []
      }
    }
  }

  source_set(target_name) {
    _ignore = [ "unittest_configs" ]
    forward_variables_from(invoker, "*", _ignore)

    if (!defined(public)) {
      public = []
    }

    metadata = {
      component = [ target_name ]
      template = [ "component" ]
    }
  }
}
