#
# The MIT License (MIT)
#
# Copyright (c) 2025 Steffen Nuessle
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.
#

import("//gn/python/python.gni")
import("//gn/vars.gni")

#
# We could also use ninja to retrieve the dependencies which would actually be
# faster. However, on Windows we seem to run into a lot of race conditions
# due to parallel file accesses. The slower but more robust solution seems to
# be clang-scan-deps.
#
action("scan-dependencies") {
  testonly = true

  # This action actually depends on all source files.
  deps = [
    "//:default",
    "//:unittest",
  ]
  outputs = [ "$target_gen_dir/$target_name.json" ]

  script = clang_scan_deps_tool
  args = [
           "-compilation-database",
           rebase_path("$root_build_dir/compile_commands.json"),
           "-mode",
           "preprocess-dependency-directives",
           "-format",
           "experimental-full",
           "-o",
         ] + rebase_path(outputs)
}

# Convert representation of deps to decouple our scripts from the
# experimental output of clang-scan-deps.
python("dependencies") {
  testonly = true
  deps = [ ":scan-dependencies" ]
  inputs = get_target_outputs(deps[0])
  outputs = dependencies.outputs
  script = "//gn/dependencies/convert-deps.py"
  args = [
    "-o",
    rebase_path(outputs[0]),
    rebase_path(inputs[0]),
    "--exclude-deps",
    "/include/*",
    "/lib/*",
    "/usr/include/*",
    "/usr/lib/*",
  ]
}
