#
# The MIT License (MIT)
#
# Copyright (c) 2025 Steffen Nuessle
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.
#

import("//gn/capture-output/capture-output.gni")
import("//gn/vars.gni")

capture_output("description-raw") {
  testonly = true
  inputs = ack_outputs
  deps = [ ack_target ]
  outputs = [ "$target_gen_dir/$target_name.json" ]
  mnemonic = "GN-DESC"

  stdout = outputs[0]
  script = gn_tool
  args = [
    "desc",
    root_build_dir,
    "//*",
    "--format=json",
    "--default-toolchain",
  ]
}

python("description") {
  testonly = true
  deps = [ ":description-raw" ]
  inputs = get_target_outputs(deps[0])
  outputs = description_outputs
  mnemonic = "DESCRIPTION"

  env = [ "PYTHONPATH=" + rebase_path("//gn/python/packages", root_build_dir) ]
  script = "//gn/description/dispatch-description.py"
  args = [
    "-o",
    rebase_path(description_outputs[0], root_build_dir),
    rebase_path(inputs[0], root_build_dir),
  ]
}
