#
# The MIT License (MIT)
#
# Copyright (c) 2025 Steffen Nuessle
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.
#

import("//gn/actions/capture-output.gni")
import("//gn/actions/python-action.gni")

template("copy_embedded_outputs") {
  if (current_toolchain != default_toolchain) {
    python_action(target_name) {
      ignore = [ "destination" ]

      forward_variables_from(invoker, "*", ignore)

      output = "${target_out_dir}/tags/${target_name}.ack"

      script = rebase_path("//gn/scripts/copy.py")
      args = [ "--source" ]
      args += rebase_path(invoker.inputs)
      args += [
        "--destination",
        invoker.destination,
        "--with-ack",
        rebase_path(output),
      ]

      outputs = [ output ]
    }
  } else {
    not_needed([ target_name ])
    not_needed(invoker, "*")
  }
}

template("install_tool") {
  if (path_exists(invoker.install_path)) {
    not_needed(invoker, "*", [ "install_path" ])
    not_needed("*")
  } else {
    args = [
      "-c",
      "print('info: installing ${target_name}...')",
    ]

    message = exec_script("/usr/bin/python", args, "trim string")
    print(message)
  }
}

