#
# The MIT License (MIT)
#
# Copyright (c) 2025 Steffen Nuessle
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.
#

import("//gn/python/python.gni")

template("jinja2") {
  assert(defined(invoker.inputs), "'inputs' must be specified")
  assert(defined(invoker.outputs), "'outputs' must be specified")
  assert(defined(invoker.args), "'args' must be specified")
  assert(!defined(invoker.script), "'script' must be unspecified")

  python(target_name) {
    _ignore = [ "args" ]

    forward_variables_from(invoker, "*", _ignore)

    requirements = [ "jinja2" ]
    script = "//gn/jinja2/render-template.py"

    args = [
             "--template",
             rebase_path(inputs[0], root_build_dir),
             "-o",
             rebase_path(outputs[0], root_build_dir),
           ] + invoker.args
  }
}
